// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNav is rendered 1`] = `null`;

exports[`EuiCollapsibleNav props button 1`] = `
<button
  aria-controls="id"
  aria-expanded="false"
  aria-pressed="false"
  class="euiCollapsibleNav__toggle"
/>
`;

exports[`EuiCollapsibleNav props hideButtonIfDocked 1`] = `
<button
  aria-controls="id"
  aria-expanded="false"
  aria-pressed="false"
  class="euiCollapsibleNav__toggle"
/>
`;

exports[`EuiCollapsibleNav props isDocked 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <nav
      class="euiCollapsibleNav euiCollapsibleNav--isDocked"
      id="id"
    >
      <button
        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiCollapsibleNav__closeButton"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <div
            aria-hidden="true"
            class="euiButtonEmpty__icon"
            data-euiicon-type="cross"
          />
          <span
            class="euiButtonEmpty__text"
          >
            close
          </span>
        </span>
      </button>
    </nav>
  </div>
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />
</div>
`;

exports[`EuiCollapsibleNav props isOpen 1`] = `
Array [
  <div />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="euiCollapsibleNav"
        id="id"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiCollapsibleNav__closeButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              aria-hidden="true"
              class="euiButtonEmpty__icon"
              data-euiicon-type="cross"
            />
            <span
              class="euiButtonEmpty__text"
            >
              close
            </span>
          </span>
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiCollapsibleNav props onClose 1`] = `null`;
